# OC.Projet4

./: .gitignore  README.md
technova-attrition/: 01_exploration.ipynb  main.py  notebook_analyse_attrition.ipynb  pyproject.toml
technova-attrition/data/: extrait_eval.csv  extrait_sirh.csv  extrait_sondage.csv
