[project]
name = "projet4-classification-attrition"
version = "0.1.0"
description = "Identification des causes d'attrition au sein de TechNova Partners"
requires-python = ">=3.10,<3.14"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "imbalanced-learn>=0.11",
    "shap>=0.43",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]
